--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [ENDPOINT]
 URL = https://wapi.hoymiles.com
-PLANT_LIST=/v0/zhgf-core/oapi/0/findMyStations
-SPECIFIED_PLANT=/v0/zhgf-core/oapi/0/findDevsByStation
+PLANT_LIST=/v0/zhgf-core/oapi/0/findMyStations?
+SPECIFIED_PLANT=/v0/zhgf-core/oapi/0/findDevsByStation?
 DATA_MICROINVERTER=/v1/plant/0/oapi/mi_data_day
