--- a/config.ini
+++ b/config.ini
@@ -2,4 +2,4 @@
 URL = https://wapi.hoymiles.com
 PLANT_LIST=/v0/zhgf-core/oapi/0/findMyStations?
 SPECIFIED_PLANT=/v0/zhgf-core/oapi/0/findDevsByStation?
-DATA_MICROINVERTER=/v1/plant/0/oapi/mi_data_day
+DATA_MICROINVERTER=/v1/plant/0/oapi/mi_data_day?
