se crea toda la logica para los reintentos, en caso de que falle una consulta lo vuelva a intentar

--- a/config.ini
+++ b/config.ini
@@ -3,3 +3,6 @@ URL = https://wapi.hoymiles.com
 PLANT_LIST=/v0/zhgf-core/oapi/0/findMyStations?
 SPECIFIED_PLANT=/v0/zhgf-core/oapi/0/findDevsByStation?
 DATA_MICROINVERTER=/v1/plant/0/oapi/mi_data_day?
+
+[SETTING]
+MAX_RETRIES=3
