--- a/config.ini
+++ b/config.ini
@@ -4,9 +4,10 @@ PLANT_LIST = /v0/zhgf-core/oapi/0/findMyStations?
 SPECIFIED_PLANT = /v0/zhgf-core/oapi/0/findDevsByStation?
 DATA_MICROINVERTER = /v1/plant/0/oapi/mi_data_day?
 TOTAL_ENERGY = /v1/plant/0/oapi/station_today_production?
+PLANT_STATUS = /v1/plant/0/oapi/gpw?
 
 [SETTING]
 MAX_RETRIES = 3
 LOG_SIZE = 104857600
 NAME_LOG = log.log
-JSON_TIME = 6
+JSON_TIME = 8
