--- a/config.ini
+++ b/config.ini
@@ -5,9 +5,11 @@ SPECIFIED_PLANT = /v0/zhgf-core/oapi/0/findDevsByStation?
 DATA_MICROINVERTER = /v1/plant/0/oapi/mi_data_day?
 TOTAL_ENERGY = /v1/plant/0/oapi/station_today_production?
 PLANT_STATUS = /v1/plant/0/oapi/gpw?
+TOKEN_URL = https://telemetry.erco.energy/api/token/create
 
 [SETTING]
 MAX_RETRIES = 3
 LOG_SIZE = 104857600
 NAME_LOG = log.log
 JSON_TIME = 8
+INTERVAL_TIME = 60
