se termina la aplicación

--- a/config.ini
+++ b/config.ini
@@ -6,10 +6,11 @@ DATA_MICROINVERTER = /v1/plant/0/oapi/mi_data_day?
 TOTAL_ENERGY = /v1/plant/0/oapi/station_today_production?
 PLANT_STATUS = /v1/plant/0/oapi/gpw?
 TOKEN_URL = https://telemetry.erco.energy/api/token/create
+ENRG_URL= https://telemetry.erco.energy/api/micro-inverter/values
 
 [SETTING]
 MAX_RETRIES = 3
 LOG_SIZE = 104857600
 NAME_LOG = log.log
-JSON_TIME = 8
-INTERVAL_TIME = 60
+JSON_TIME = 15
+INTERVAL_TIME=60
